--- a/dotnet-netstat.csproj
+++ b/dotnet-netstat.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>dotnet_netstat</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
